overlapping resolved(set padding to body)

--- a/styles/general.css
+++ b/styles/general.css
@@ -6,4 +6,8 @@
 
 body {
     background-color: black;
+    margin:0;
+    padding-top: 80px;
+    padding-left: 96px;
+    padding-right: 24px;
 }
