--- a/styles/header.css
+++ b/styles/header.css
@@ -3,8 +3,10 @@
     justify-content: space-between;
     background-color: rgb(53, 50, 50);
     padding: 5px 0 5px 0;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right:0;
     z-index: 1;
 }
 .header-line_icon {
