--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,10 +1,13 @@
 .navigation-bar {
     background-color: rgb(53, 50, 50);
-    width: 60px;
+    width: 72px;
     height: 100%;
-    position: sticky;
-    /* top: 35px; */
+    position: fixed;
+    top: 35px;
+    left: 0;
+    bottom: 0;
     padding-top: 15px;
+    z-index: 200;
 }
 nav div {
     text-align: center;
